added Projectile, game logic, and extreme tweaks

--- a/project_deadrunner.cbp
+++ b/project_deadrunner.cbp
@@ -42,6 +42,7 @@
 		</Compiler>
 		<Linker>
 			<Add library="../common/lib/libSOIL.a" />
+			<Add library="../common/lib/libirrKlang.a" />
 			<Add library="glut32" />
 			<Add library="opengl32" />
 			<Add library="glu32" />
